
ChangeLog
 [ + added, - removed, * changed ]
 + 21Apr2015 Add check for MPI_Comm_spawn
             Add omp_get_thread_num default to 0 and message in Extrae
             Automatically detect the system type to enable/disable openmp runtimes
             Rebirth IBM xlsmp instrumentation (requires further testing)
 + 20Apr2015 --with-libgomp supports auto to determine the appropriate version from CC
             Add OpenMP task-based statistics (instantiated, executed)
             Add OMPT dependencies (MB project)
             Freeing memory, reported from Valgrind
 * 10Apr2015 Fixed bug in Python instrumentation. The signature of the
 Extrae_define_event_type receives parameters by reference.
 * 31Mar2015 Added configure options in the documentation regarding the on-line analysis and the instrumentation of OpenSHMEM.
 + 31Mar2014 Add SEQ example using -finstrument-functions
 * 30Mar2015 Create directory if target trace-file is in a directory that does not exist
 * 27Mar2015 Changed memory allocation for the InputTraces and FileSet structures in the merger: instead of allocating space for MAX_FILES, we allocate only for the maximum of mpits. MAX_FILES constant has been removed.
             Extended examples to support dynamic memory instrumentation.
 * 16Mar2015 Support up to 512 params in Intel KMP OpenMP runtime
 * 13Mar2015 Support to compile Extrae outside its src directory
             (thanks to Jorge Bellon)
             Fixed some Extrae tests
 * 10Mar2015 Improved/fixed support for task constructs in libgomp
             (thanks to Eduard Ayguade)
 * 05Mar2015 Fixed pthread support (missing pthread_id for master pthred)
             Use multiarch triplet where available
             (thanks to JM Perez)
 * 03Mar2015 Revamped papi_best_set
 * 26Feb2015 Completed MPI_Intercomm_create support (serial & parallel mergers)
 + 23Feb2015 Instrumentation of MPI_intercomm_[create|merge]
 + 13Feb2015 Extend malloc-related instrumentation 