@@ -45,11 +45,12 @@ extern int *Pending_Trace_Mode_Change;
 #define MPI_IS_NOT_STACKED(tid) (MPI_Deepness[tid] == 0)
 
 void TMODE_setInitial (int mode);
-int Trace_Mode_Initialize (int num_threads, int emitevent);
-int Trace_Mode_reInitialize (int old_num_threads, int new_num_threads, int emitevent);
+int Trace_Mode_Initialize (int num_threads);
+int Trace_Mode_reInitialize (int old_num_threads, int new_num_threads);
 void Trace_Mode_Change (int tid, iotimer_t time);
 void Trace_Mode_CleanUp (void);
 void Trace_mode_switch (void);
+int Trace_Mode_FirstMode (unsigned thread);
 
 /* Bursts mode specific */
 
